PoC working - ProductRepository implementation is selected based on a config value in application.properties file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ logging.level.com.example.demo=DEBUG
 #logging.level.org.springframework=DEBUG
 ## Profiles
 spring.profiles.active=bootstrap
+## Services
+implementations.repository=productRepositoryDocument
