--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,8 @@ logging.level.com.example.demo=DEBUG
 ## Profiles
 spring.profiles.active=bootstrap
 ## Services
-implementations.repository=productRepositoryDocument
+app.database.type=Graph
+# Neo4j config
+spring.neo4j.uri=neo4j+s://3e30b62a.databases.neo4j.io
+spring.neo4j.authentication.username=neo4j
+spring.neo4j.authentication.password=PgjaXpP4alHo7LwJQ4KLjHWpEI75zH64eSZNIc9vh4I
