every endpoint other than the aggregated rating and the file controller is now working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,7 @@ logging.level.com.example.demo=DEBUG
 ## Profiles
 spring.profiles.active=bootstrap
 ## Services
+# values: Relational, Graph, Document
 app.database.type=Graph
 # Neo4j config
 spring.neo4j.uri=neo4j+s://3e30b62a.databases.neo4j.io
