--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,13 @@
      <artifactId>spring-security-core</artifactId>
 	<!-- <version>5.1.6.RELEASE</version> -->
    </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
- </dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
