--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=gg
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# access h2 console at http://localhost:8080/h2-console  
+# access h2 console at http://localhost:8080/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
@@ -31,8 +31,11 @@ logging.level.com.example.demo=DEBUG
 spring.profiles.active=bootstrap
 ## Services
 # values: Relational, Graph, Document
-app.database.type=Graph
+app.database.type=Document
 # Neo4j config
 spring.neo4j.uri=neo4j+s://3e30b62a.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
 spring.neo4j.authentication.password=PgjaXpP4alHo7LwJQ4KLjHWpEI75zH64eSZNIc9vh4I
+# MongoDB config
+spring.data.mongodb.uri=mongodb+srv://root:root@productreviewapp.z2oyh8a.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.database=ProductReviewApp
