Added hashbased sku generator
Renamed SKUGeneratorFirstImpl -> SKUGeneratorRandomPatternImp

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,9 @@ logging.level.com.example.demo=DEBUG
 ## Profiles
 spring.profiles.active=bootstrap
 ## Services
+## SKU Generator (HashBased, RandomPattern)
+app.sku-generator=HashBased
+
 # values: Relational, Graph, Document
 app.database.type=Graph
 # Neo4j config
