--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,6 +30,9 @@ logging.level.com.example.demo=DEBUG
 ## Profiles
 spring.profiles.active=bootstrap
 ## Services
+## Recommendation Algorithm (VoteBased, Popular)
+app.recommendation-algorithm=VoteBased
+
 ## SKU Generator (HashBased, RandomPattern)
 app.sku-generator=HashBased
 
