--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.password=gg
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# access h2 console at http://localhost:8080/h2-console  
+# access h2 console at http://localhost:8080/h2-console
 spring.jpa.hibernate.ddl-auto=create-drop
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
@@ -31,3 +31,5 @@ logging.level.com.example.demo=DEBUG
 spring.profiles.active=bootstrap
 ## Services
 implementations.repository=productRepositoryRelational
+## Recommendation Algorithm (VoteBased, Popular)
+app.recommendation-algorithm=VoteBased
