Converted id from string to long

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -33,6 +35,4 @@ build/
 ### VS Code ###
 .vscode/
 
-### Visual paradigm temp files ###
-*.vpp.bak*
-*.vpp.lck
+
