--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -32,3 +34,5 @@ build/
 
 ### VS Code ###
 .vscode/
+
+
