--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -36,3 +38,4 @@ build/
 ### Visual paradigm temp files ###
 *.vpp.bak*
 *.vpp.lck
+
