--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,7 +37,7 @@ app.recommendation-algorithm=VoteBased
 app.sku-generator=HashBased
 
 # values: Relational, Graph, Document
-app.database.type=Document
+app.database.type=Relational
 # Neo4j config
 spring.neo4j.uri=neo4j+s://3e30b62a.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
