--- a/VotesService/docker-compose.yml
+++ b/VotesService/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '3.8'
 services:
-  reviews_service:
+  votes_service:
     build: .
     ports:
       - "8080:8080"
     environment:
-      - spring.datasource.url=jdbc:h2:file:./data/reviews_service;MV_STORE=FALSE;AUTO_SERVER=true;
+      - spring.datasource.url=jdbc:h2:file:./data/votes_service;MV_STORE=FALSE;AUTO_SERVER=true;
       - spring.datasource.driverClassName=org.h2.Driver
       - spring.datasource.username=sa
       - spring.datasource.password=gg
