docker attempt - something is working

--- a/ReviewsService/docker-compose.yml
+++ b/ReviewsService/docker-compose.yml
@@ -14,3 +14,17 @@ services:
       - spring.h2.console.path=/h2-console
     volumes:
       - ./data:/data
+    depends_on:
+      - database
+
+  database:
+    image: oscarfonts/h2
+    ports:
+      - "1521:1521"
+      - "81:81"
+    volumes:
+      - /path/to/local/data_dir:/opt/h2-data
+      - ./data:/data
+    environment:
+      - H2_OPTIONS=-ifNotExists
+    container_name: MyH2Instance
