--- a/ProductsService/src/main/resources/application.properties
+++ b/ProductsService/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.cloud.azure.servicebus.namespace=isepstepazel.servicebus.windows.net
+spring.cloud.azure.servicebus.entity-name=<your-servicebus-queue-name>
+spring.cloud.azure.servicebus.entity-type=queue
