--- a/ReviewsService/pom.xml
+++ b/ReviewsService/pom.xml
@@ -20,6 +20,26 @@
     </properties>
     <dependencies>
 
+<!-- Azure Service Bus -->
+<!--        <dependency>-->
+<!--            <groupId>com.azure.spring</groupId>-->
+<!--            <artifactId>spring-cloud-azure-dependencies</artifactId>-->
+<!--            <version>4.14.0</version>-->
+<!--            <type>pom</type>-->
+<!--            <scope>import</scope>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>com.azure.spring</groupId>-->
+<!--            <artifactId>spring-cloud-azure-starter-servicebus</artifactId>-->
+<!--            <version>5.8.0</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-messaging-servicebus</artifactId>
+            <version>7.2.0</version> <!-- Use the latest version available -->
+        </dependency>
+
+        <!--        -->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
