--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,24 @@
 version: '3.8'
 services:
+  api-gateway:
+    build: ./api-gateway
+    ports:
+      - "80:80"
+    environment:
+      - spring.datasource.url=jdbc:h2:file:./data/api-gateway;MV_STORE=FALSE;AUTO_SERVER=true;
+      - spring.datasource.driverClassName=org.h2.Driver
+      - spring.datasource.username=sa
+      - spring.datasource.password=gg
+      - spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+      - spring.h2.console.enabled=true
+      - spring.h2.console.path=/h2-console
+    volumes:
+      - ./data:/data
+
   reviews_service:
     build: ./ReviewsService
     ports:
-      - "8080:8080"
+      - "8083:8083"
     environment:
       - spring.datasource.url=jdbc:h2:file:./data/reviews_service;MV_STORE=FALSE;AUTO_SERVER=true;
       - spring.datasource.driverClassName=org.h2.Driver
@@ -16,16 +31,31 @@ services:
       - ./data:/data
 
   votes_service:
-          build: ./VotesService
-          ports:
-            - "8081:8081"
-          environment:
-            - spring.datasource.url=jdbc:h2:file:./data/votes_service;MV_STORE=FALSE;AUTO_SERVER=true;
-            - spring.datasource.driverClassName=org.h2.Driver
-            - spring.datasource.username=sa
-            - spring.datasource.password=gg
-            - spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-            - spring.h2.console.enabled=true
-            - spring.h2.console.path=/h2-console
-          volumes:
-            - ./data:/data
+    build: ./VotesService
+    ports:
+      - "8082:8082"
+    environment:
+      - spring.datasource.url=jdbc:h2:file:./data/votes_service;MV_STORE=FALSE;AUTO_SERVER=true;
+      - spring.datasource.driverClassName=org.h2.Driver
+      - spring.datasource.username=sa
+      - spring.datasource.password=gg
+      - spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+      - spring.h2.console.enabled=true
+      - spring.h2.console.path=/h2-console
+    volumes:
+      - ./data:/data
+
+  products_service:
+    build: ./product-service
+    ports:
+      - "8081:8081"
+    environment:
+      - spring.datasource.url=jdbc:h2:file:./data/products_service;MV_STORE=FALSE;AUTO_SERVER=true;
+      - spring.datasource.driverClassName=org.h2.Driver
+      - spring.datasource.username=sa
+      - spring.datasource.password=gg
+      - spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+      - spring.h2.console.enabled=true
+      - spring.h2.console.path=/h2-console
+    volumes:
+      - ./data:/data
