--- a/VotesService/Dockerfile
+++ b/VotesService/Dockerfile
@@ -7,6 +7,7 @@ COPY .mvn .mvn
 COPY pom.xml .
 COPY src src
 
+RUN sed -i 's/\r$//' mvnw
 RUN --mount=type=cache,target=/root/.m2 ./mvnw install -DskipTests
 RUN mkdir -p target/extracted && (java -Djarmode=layertools -jar target/*.jar extract --destination target/extracted)
 
