--- a/ReviewsService/src/main/resources/example.application.properties
+++ b/ReviewsService/src/main/resources/example.application.properties
@@ -1,3 +1,5 @@
+# Port
+server.port=8082
 # swagger-ui custom path
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
@@ -37,7 +39,7 @@ app.recommendation-algorithm=VoteBased
 app.sku-generator=HashBased
 
 # values: Relational, Graph, Document
-app.database.type=Document
+app.database.type=Relational
 # Neo4j config
 spring.neo4j.uri=neo4j+s://3e30b62a.databases.neo4j.io
 spring.neo4j.authentication.username=neo4j
