--- a/api-gateway/src/main/resources/example.application.properties
+++ b/api-gateway/src/main/resources/example.application.properties
@@ -1,3 +1,5 @@
+# Port
+server.port=80
 # swagger-ui custom path
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/api-docs
@@ -45,3 +47,7 @@ spring.neo4j.authentication.password=PgjaXpP4alHo7LwJQ4KLjHWpEI75zH64eSZNIc9vh4I
 # MongoDB config
 spring.data.mongodb.uri=mongodb+srv://root:root@productreviewapp.z2oyh8a.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=ProductReviewApp
+# Routing
+services.product.url=http://localhost:8081
+services.vote.url=http://localhost:8082
+services.review.url=http://localhost:8082
